fix input forms & add button mobile

--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -108,7 +108,7 @@
     width: 55%;
   }
   .profile__add-button {
-    width: 70%;
+    width: 282px;
     margin: 36px 0;
   }
 
